--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,12 @@ tasks.withType(JavaCompile).configureEach {
 	it.options.release = 17
 }
 
+loom {
+	mixin {
+		defaultRefmapName = "rings_of_aeon.refmap.json"
+	}
+}
+
 java {
 	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
 	// if it is present.
