add repair items for Blood Rush and DevilsFortune + particle fix

--- a/src/main/resources/assets/rings_of_aeon/models/item/unknown_cat_skull.json
+++ b/src/main/resources/assets/rings_of_aeon/models/item/unknown_cat_skull.json
@@ -3,7 +3,7 @@
 	"texture_size": [32, 32],
 	"textures": {
 		"0": "rings_of_aeon:block/unknown_cat_skull",
-		"particle": "minecraft:block/bone_block"
+		"particle": "minecraft:block/soul_sand"
 	},
 	"elements": [
 		{
