Emi Compatibility Implemented (+ one TODO for tomorrow), gonna take a break

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ repositories {
 	maven {
 		url = "https://api.modrinth.com/maven"
 	}
+	maven {
+		name = "TerraformersMC"
+		url = "https://maven.terraformersmc.com/"
+	}
 	mavenCentral()
 }
 
@@ -34,8 +38,13 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	//Shadowed
 	include modImplementation("maven.modrinth:sherdsapi:${project.sherd_version}-fabric")
 	include modImplementation("dev.thomasglasser.tommylib:tommylib-fabric-${minecraft_version}:5.0.1")
+
+	//Optional Compatibilities
+	modCompileOnly "dev.emi:emi-fabric:${emi_version}:api"
+	modLocalRuntime "dev.emi:emi-fabric:${emi_version}"
 
 	// Uncomment the following line to enable the deprecated Fabric API modules.
 	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
