Archivist Table and Tattered Paper, will continue working on tmrw

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,10 @@ repositories {
 		name = "TerraformersMC"
 		url = "https://maven.terraformersmc.com/"
 	}
+	maven {
+		name = "Ladysnake Libs"
+		url = 'https://maven.ladysnake.org/releases'
+	}
 	mavenCentral()
 }
 
