--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ yarn_mappings=1.20.4+build.3
 loader_version=0.15.7
 
 # Mod Properties
-mod_version=1.0.0
+mod_version=1.1.0
 maven_group=keno.net.rings_of_aeon
 archives_base_name=rings_of_aeon
 
@@ -17,3 +17,4 @@ archives_base_name=rings_of_aeon
 fabric_version=0.96.11+1.20.4
 sherd_version=5.1.1
 emi_version=1.1.4+1.20.4
+trinkets_version=3.8.1
