--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ repositories {
 		name = "Ladysnake Libs"
 		url = 'https://maven.ladysnake.org/releases'
 	}
+	maven { url 'https://maven.wispforest.io' }
 	mavenCentral()
 }
 
@@ -45,6 +46,8 @@ dependencies {
 	//Shadowed
 	include modImplementation("maven.modrinth:sherdsapi:${project.sherd_version}-fabric")
 	include modImplementation("dev.thomasglasser.tommylib:tommylib-fabric-${minecraft_version}:5.0.1")
+	include modImplementation("io.wispforest:lavender:${project.lavender_version}")
+	include "io.wispforest:owo-sentinel:${project.owo_version}"
 
 	//Optional Compatibilities
 	modCompileOnly "dev.emi:emi-fabric:${emi_version}:api"
