--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,5 @@ archives_base_name=rings_of_aeon
 fabric_version=0.96.11+1.20.4
 sherd_version=5.1.1
 emi_version=1.1.4+1.20.4
-trinkets_version=3.8.1
+lavender_version=0.1.5+1.20.3
+owo_version=0.12.6+1.20.3
