Fix gradle errors + Fix Altar Of Wealth bugs + Add ItemRenderingHelper

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,5 @@ sherd_version=5.1.1
 emi_version=1.1.4+1.20.4
 lavender_version=0.1.5+1.20.3
 owo_version=0.12.6+1.20.3
+# Loom
+fabric.loom.multiProjectOptimisation=false
